@@ -1,3 +1,8 @@
+Tue Jun 20 17:41:30 2000  Christopher Faylor <cgf@cygnus.com>
+
+	* mkvers.sh: Fix problem with handling of CVS tags causing .rc syntax
+	errors.
+
 Tue Jun 20 13:38:12 2000  Christopher Faylor <cgf@cygnus.com>
 
 	* Makefile.in: Change to build the DLL during a cross-compiler build.
